<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Skyline</string>
    <string name="search">Search</string>
    <string name="error">An error has occurred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="emulator">Emulator</string>
    <string name="enabled">Enabled</string>
    <string name="settings">Settings</string>
    <string name="share_logs">Share Logs</string>
    <string name="refresh">Refresh</string>
    <string name="log_share_prompt">Share log file</string>
    <string name="logs_not_found">No logs were created during the last run</string>
    <string name="all">All</string>
    <string name="metadata_missing">Metadata Missing</string>
    <string name="icon">Icon</string>
    <string name="no_rom">Cannot find any ROMs</string>
    <string name="pin">Pin</string>
    <string name="play">Play</string>
    <string name="save_management">Save management</string>
    <string name="delete_save">Delete save</string>
    <string name="import_save">Import</string>
    <string name="export_save">Export</string>
    <string name="searching_roms">Searching for ROMs</string>
    <string name="invalid_file">Invalid file</string>
    <string name="missing_title_key">Missing title key</string>
    <string name="incomplete_prod_keys">Incomplete production keys</string>
    <string name="pause">Pause</string>
    <string name="mute">Mute</string>
    <string name="content">Content</string>
    <string name="open_data_directory">View Internal Directory</string>
    <string name="open_data_directory_summary">Opens Skyline\'s internal directory in a file manager</string>
    <string name="failed_open_directory">Cannot find an external file manager to open Skyline\'s internal directory</string>
    <string name="open_data_directory_failed">Cannot find an external file manager to open Skyline\'s internal directory</string>
    <string name="search_location">Search Locations</string>
    <string name="search_location_config">Search Locations Configuration</string>
    <string name="delete_search_location">Delete this search location</string>
    <string name="add">Add</string>
    <string name="add_search_location">Add a search location</string>
    <string name="search_locations_count">%1$s search location%2$s selected</string>
    <string name="search_location_add_success">Search location added successfully</string>
    <string name="search_location_delete_success">Search location deleted successfully</string>
    <string name="search_location_duplicated">Search location already added</string>
    <string name="keys">Keys</string>
    <string name="prod_keys">Production Keys</string>
    <string name="title_keys">Title Keys</string>
    <string name="import_keys_success">Successfully imported keys</string>
    <string name="import_keys_invalid_input_path">The path to the provided keys is invalid</string>
    <string name="import_keys_invalid_keys">The keys you tried to import are invalid</string>
    <string name="import_keys_delete_previous_failed">Failed to delete the currently installed keys</string>
    <string name="import_keys_move_failed">Failed to move the keys to the internal directory</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="use_material_you">Use Material You</string>
    <string name="use_material_you_desc_off">Skyline colors will be used</string>
    <string name="use_material_you_desc_on">Material You will be used</string>
    <string name="app_language">App Language</string>
    <string name="app_language_default">Use System Default</string>
    <string name="layout_type">Game Display Layout</string>
    <string name="sort_apps_by">Games Sorting Order</string>
    <string name="select_action">Always Show Game Information</string>
    <string name="select_action_desc_on">Game information will be shown on clicking a game</string>
    <string name="select_action_desc_off">Game information will only be shown on long-clicking a game</string>
    <string name="filter_invalid_files">Hide Invalid Files</string>
    <string name="filter_invalid_files_desc_off">Show files that have been parsed as invalid</string>
    <string name="filter_invalid_files_desc_on">Hide files that have been parsed as invalid</string>
    <string name="game">Game</string>
    <string name="use_custom_settings">Enable Custom Settings</string>
    <string name="use_custom_settings_desc_on">Custom settings are enabled for this game</string>
    <string name="use_custom_settings_desc_off">Custom settings are disabled for this game</string>
    <string name="export_custom_settings">Export custom settings to text</string>
    <string name="export_custom_settings_desc">Copy a text with your current settings to share online</string>
    <string name="reset_custom_settings">Reset Custom Settings</string>
    <string name="reset_custom_settings_desc">Reset custom settings to the default values</string>
    <string name="reset_settings_warning">Are you sure you want to reset all settings to the default values? <b>Current settings will be lost</b></string>
    <string name="copy_global_settings">Copy Global Settings</string>
    <string name="copy_global_settings_desc">Copy global settings to this game</string>
    <string name="copy_global_settings_warning">Are you sure you want to copy global settings to this game? <b>Current settings will be lost</b></string>
    <string name="system">System</string>
    <string name="use_docked">Use Docked Mode</string>
    <string name="handheld_enabled">The system will emulate being in handheld mode</string>
    <string name="docked_enabled">The system will emulate being in docked mode</string>
    <string name="username">Username</string>
    <string name="username_default" translatable="false">@string/app_name</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="system_language">System Language</string>
    <string name="system_region">System Region</string>
    <string name="internet">The system will be able to use internet</string>
    <string name="display">Display</string>
    <string name="perf_stats">Show Performance Statistics</string>
    <string name="perf_stats_desc_off">Performance Statistics will not be shown</string>
    <string name="perf_stats_desc_on">Performance Statistics will be shown in the top-left corner</string>
    <string name="max_refresh_rate">Use Maximum Display Refresh Rate</string>
    <string name="max_refresh_rate_enabled">Sets the display refresh rate as high as possible (Will break most games)</string>
    <string name="max_refresh_rate_disabled">Sets the display refresh rate to 60Hz</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="respect_display_cutout">Respect Display Cutout</string>
    <string name="respect_display_cutout_enabled">Do not draw UI elements in the cutout area</string>
    <string name="respect_display_cutout_disabled">Allow UI elements to be drawn in the cutout area</string>
    <string name="support_foldable_screen">Support Foldable Screens</string>
    <string name="support_foldable_screen_enabled">Folded devices will display game and controller separately</string>
    <string name="support_foldable_screen_disabled">Display controller over games even when device is folded</string>
    <string name="show_pause_button">Show Pause Button</string>
    <string name="show_pause_button_disabled">The pause button won\'t be displayed</string>
    <string name="show_pause_button_enabled">The pause button will be displayed</string>
    <string name="audio">Audio</string>
    <string name="disable_audio_output">Disable Audio Output</string>
    <string name="disable_audio_output_enabled">Audio output is disabled</string>
    <string name="disable_audio_output_disabled">Audio output is enabled</string>
    <string name="gpu">GPU</string>
    <string name="gpu_driver_config">GPU Driver Configuration</string>
    <string name="gpu_driver_config_desc">Active driver: %1$s</string>
    <string name="gpu_driver_config_desc_unsupported">Your device doesn\'t support custom drivers</string>
    <string name="force_triple_buffering">Force Triple Buffering</string>
    <string name="triple_buffering_enabled">Utilize at least three swapchain buffers (Higher FPS but more input lag)</string>
    <string name="triple_buffering_disabled">Utilize at least two swapchain buffers (Lower FPS but less input lag)</string>
    <string name="disable_frame_throttling">Disable Frame Throttling</string>
    <string name="disable_frame_throttling_enabled">Game is allowed to submit frames as fast as possible (Only for benchmarking)\n\n<b>Note:</b> An alternative method is utilized to measure the FPS with this enabled, the figures must not be compared to throttled FPS figures</string>
    <string name="disable_frame_throttling_disabled">Only allow the game to submit frames at the display refresh rate</string>
    <string name="executor_slot_count_scale">Executor Slot Count Scale</string>
    <string name="executor_slot_count_scale_desc">Scale controlling the maximum number of simultaneous GPU executions (Higher may sometimes perform better but will use more RAM)</string>
    <string name="executor_flush_threshold">Executor Flush Threshold</string>
    <string name="executor_flush_threshold_desc">Controls how frequently work is flushed to the GPU</string>
    <string name="use_direct_memory_import">Use Direct Memory Import</string>
    <string name="use_direct_memory_import_desc">May alter performance and stability in some games\n<b>NOTE:</b> This option only works on proprietary Adreno drivers</string>
    <string name="force_max_gpu_clocks">Force Maximum GPU Clocks</string>
    <string name="force_max_gpu_clocks_desc">Forces the GPU to run at its maximum possible clock speed (May cause excessive heating and power usage)</string>
    <string name="force_max_gpu_clocks_desc_unsupported">Your device does not support forcing maximum GPU clocks</string>
    <string name="free_guest_texture_memory">Free Guest Texture Memory</string>
    <string name="free_guest_texture_memory_desc">Allows guest texture data to be freed from memory when unneeded (Can rarely cause crashes)</string>
    <string name="shader_cache">Disable Shader Cache</string>
    <string name="shader_cache_disabled">Cached shaders won\'t be loaded, will cause stutters</string>
    <string name="shader_cache_enabled">Cached shaders will be loaded, can heavily reduce stuttering</string>
    <string name="hacks">Hacks</string>
    <string name="enable_fast_gpu_readback">Enable Fast GPU Readback</string>
    <string name="enable_fast_gpu_readback_enabled">Fast GPU readback is enabled (Will break some games but others will have higher performance)</string>
    <string name="enable_fast_gpu_readback_disabled">Fast GPU readback is disabled (Ensures highest accuracy)</string>
    <string name="enable_fast_readback_writes">Enable Fast Readback Writes</string>
    <string name="enable_fast_readback_writes_enabled">Fast readback writes are enabled</string>
    <string name="enable_fast_readback_writes_disabled">Fast readback writes are disabled</string>
    <string name="disable_subgroup_shuffle">Disable GPU Subgroup Shuffle</string>
    <string name="disable_subgroup_shuffle_enabled">Shader subgroup shuffle operations are disabled, may cause severe graphical issues</string>
    <string name="debug">Debug</string>
    <string name="validation_layer">Enable Validation Layer</string>
    <string name="validation_layer_enabled">The Vulkan validation layer is enabled, major slowdowns are to be expected</string>
    <string name="validation_layer_disabled">The Vulkan validation layer is disabled</string>
</resources>